# godot_keepass_rust_totp

./: .gitattributes  .gitignore  LICENSE  Main.gd  Main.tscn  OtpButton.gd  OtpButton.tscn  OtpButtonContainer.gd  README.md  copy-native-to-android.sh  export_presets.cfg  project.godot  sign.bat  test.bat
.cargo/: config.toml
.github/workflows/: build.yml
android/plugins/: androidPlugin.gdap
androidPlugin/: .gitignore  build.gradle  gradle.properties  settings.gradle
androidPlugin/app/: build.gradle
androidPlugin/app/src/androidTest/java/fr/orion78/keepassTotp/androidPlugin/: ExampleInstrumentedTest.java
androidPlugin/app/src/main/: AndroidManifest.xml
androidPlugin/app/src/main/java/fr/orion78/keepassTotp/androidPlugin/: AndroidPlugin.java  FileOpenerPlugin.java  Native.java
androidPlugin/app/src/main/res/values/: strings.xml
androidPlugin/app/src/test/java/fr/orion78/keepassTotp/androidPlugin/: ExampleUnitTest.java
androidPlugin/gradle/wrapper/: gradle-wrapper.properties
emcc-test/: emcc-test  wasm-opt
font/: roboto.tres
native/: KeepassTotp.gdns  godot_rs_keepass.gdnlib
native/src/: Cargo.toml
native/src/.cargo/: config.toml
native/src/src/: android.rs  lib.rs
test/: totp_test.kdbx  totp_test_from_keepass.kdbx  totp_test_kdb3.kdbx
