[package]
name = "godot_rs_keepass"
version = "0.1.1"
authors = ["Guillaume Turchini <orion+github@orion78.fr>"]
edition = "2018"

[dependencies]
gdnative = "0.9.3"
keepass = "0.4.9"
xotp = "0.3.0"
base64 = "0.13"
itertools = "0.10.3"

# Dependencies for tests
[dev-dependencies]

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true
opt-level = 3
lto = true

[patch.crates-io]
keepass = { git = 'https://github.com/orion78fr/keepass-rs', branch = "master" }
chrono = { git = 'https://github.com/chronotope/chrono', ref = "f6bd567bb677262645c1fc3131c8c1071cd77ec3" }
